# Deepseek_Bubble_Chart

./: README.md  deepseek_r1.ipynb  pyproject.toml
