[tool.poetry]
name = "deepseek-bubble-chart"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.5"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
plotly = "^5.24.1"
matplotlib = "^3.10.0"
nbformat = "^5.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
